--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <table>
       <tr>
         <td>d</td>
-        <td></td>
+        <td>asdfasfasfd</td>
         <td></td>
         <td></td>
         <td></td>
