--- a/dex.html
+++ b/dex.html
@@ -30,6 +30,7 @@
         let result = '';
         for (const card of arr) {
           result += card;
+          result += ' ';
         }
         document.getElementById(id).innerHTML = result;
       };
