add sizing options

--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
   <body>
     <h1>Shinies</h1>
     Started: 2024.10.03
+    <br />
+    <a
+      href="#"
+      onclick="document.querySelectorAll('img').forEach(p => p.style.width='50px');"
+      >50</a
+    >
+
+    <a
+      href="#"
+      onclick="document.querySelectorAll('img').forEach(p => p.style.width='100px');"
+      >100</a
+    >
+    <a
+      href="#"
+      onclick="document.querySelectorAll('img').forEach(p => p.style.width='200px');"
+      >200</a
+    >
+
+    <a
+      href="#"
+      onclick="document.querySelectorAll('img').forEach(p => p.style.width='300px');"
+      >300</a
+    >
+    <a
+      href="#"
+      onclick="document.querySelectorAll('img').forEach(p => p.style.width='400px');"
+      >400</a
+    >
+    <a
+      href="#"
+      onclick="document.querySelectorAll('img').forEach(p => p.style.width='500px');"
+      >500</a
+    >
+
     <hr />
     <div id="content">loading...</div>
 
