--- a/index.html
+++ b/index.html
@@ -6,67 +6,86 @@
   </head>
   <body>
     <h1>Shinies</h1>
+    rows: <input type="text" id="rowinput" value="2" /> cols:
+    <input type="text" id="colinput" value="3" />
+    <button onclick="getvalues()">Click</button>
+    <br />
     Started: 2024.10.03
     <br />
-    <a
-      href="#"
-      onclick="document.querySelectorAll('img').forEach(p => p.style.width='50px');"
-      >50</a
-    >
-
-    <a
-      href="#"
-      onclick="document.querySelectorAll('img').forEach(p => p.style.width='100px');"
-      >100</a
-    >
-    <a
-      href="#"
-      onclick="document.querySelectorAll('img').forEach(p => p.style.width='200px');"
-      >200</a
-    >
-
-    <a
-      href="#"
-      onclick="document.querySelectorAll('img').forEach(p => p.style.width='300px');"
-      >300</a
-    >
-    <a
-      href="#"
-      onclick="document.querySelectorAll('img').forEach(p => p.style.width='400px');"
-      >400</a
-    >
-    <a
-      href="#"
-      onclick="document.querySelectorAll('img').forEach(p => p.style.width='500px');"
-      >500</a
-    >
+    <input type="text" id="imgwidth" value="50" />
+    <button onclick="changeWidth()">Click</button>
 
     <hr />
-    <div id="content">loading...</div>
+    <div id="status">loading...</div>
+    <div id="content"></div>
 
     <script>
       const url =
-        'https://script.google.com/macros/s/AKfycbwgVdhfVpgvtTLFt4v-HPN95s6f8SomDnqPovzugCCrENHEZr057k2bChwQMg_8O00-vw/exec';
+        'https://script.google.com/macros/s/AKfycbyseTU2lYihy0VzgjKIgyqFKydSfd-mPkaHniW79BFgsHob_D7Cr6-Fd9sacErhmzdq/exec';
       document.getElementById('content').action = url;
+
+      const getvalues = () => {
+        document.getElementById('status').innerHTML = 'loading...';
+
+        fetch(`${url}?header=tags`)
+          .then((response) => response.json())
+          .then(({ data }) => {
+            fillBinder(data, rowvalue.value, colvalue.value);
+          })
+          .catch(
+            (error) => (document.getElementById('content').innerHTML = error)
+          );
+      };
+      let cols = 8;
+      let rows = 4;
 
       // fetching the data from each column in the sheet
       // then populating the respective datalist
-      fetch(`${url}?header=tags`)
-        .then((response) => response.json())
-        .then(({ data }) => {
-          console.log(data);
-          fillBinder('content', data);
-        })
-        .catch((error) => console.error('!!!!!!!!', error));
+      let colvalue = document.getElementById('colinput');
+      let rowvalue = document.getElementById('rowinput');
+      getvalues();
 
       // function to add options to datalists
-      const fillBinder = (id, arr) => {
-        let result = '';
-        for (const card of arr) {
-          result += card;
-          result += ' ';
-        }
-        document.getElementById(id).innerHTML = result;
+      const fillBinder = (arr, rows, cols) => {
+        console.log(arr);
+        d = '';
+        arr.forEach((v, i) => {
+          if (!rows || !cols) {
+            d += `${v} `;
+          } else {
+            col_mod = (i + 1) % cols;
+            row_mod = (i + 1) % (rows * cols);
+            cell = `<td>${v}</td>`;
+            s = '';
+            if (row_mod == 1) {
+              s += `<table style='float:left;padding:10px;'>`;
+            }
+            if (col_mod == 0) {
+              s += `${cell}</tr>`;
+            } else if (col_mod == 1) {
+              s += `<tr>${cell}`;
+            } else {
+              s += `${cell}`;
+            }
+            if (row_mod == 0) {
+              s += '</table>';
+            }
+            console.log(s);
+            d += s;
+          }
+        });
+
+        document.getElementById('content').innerHTML = d;
+        document.getElementById('status').innerHTML = '';
+      };
+
+      const changeWidth = () => {
+        document
+          .querySelectorAll('img')
+          .forEach(
+            (p) =>
+              (p.style.width = `${document.getElementById('imgwidth').value}px`)
+          );
       };
     </script>
   </body>
