--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>dex</title>
+    <meta charset=“UTF-8”>
     <link rel="stylesheet" href="tcg.css" />
+    <title>Reward Binder</title>
   </head>
   <body>
     <div>
@@ -14,12 +15,13 @@
     </div>
     <div>
       <input type="text" id="inputImgWidth" value="50" />
-      <button onclick="updateImgWidth()">Change card width</button> |
+       |
+      <button onclick="updateImgWidth()">Change card width</button>
       <button onclick="updateInputImgWidth('delta', -100)">-100</button>
       <button onclick="updateInputImgWidth('delta', -10)">-10</button>
       <button onclick="updateInputImgWidth('delta', 10)">+10</button>
       <button onclick="updateInputImgWidth('delta', 100)">+100</button>
-      <br>
+       |
       <button onclick="updateInputImgWidth('absolute', 50)" class="solid">50</button>
       <button onclick="updateInputImgWidth('absolute', 100)" class="solid">100</button>
       <button onclick="updateInputImgWidth('absolute', 200)" class="solid">200</button>
