--- a/index.html
+++ b/index.html
@@ -11,21 +11,26 @@
       <input type="text" id="inputRow" value="4" />
       Cols:
       <input type="text" id="inputCol" value="8" />
-      <button onclick="fetchData()">Change page size</button>
-    </div>
-    <div>
-      <input type="text" id="inputImgWidth" value="50" />
-       |
-      <button onclick="updateImgWidth()">Change card width</button>
+      <button onclick="fetchData()">Apply</button>
+      |
+      <button onclick="updateInputPageSize(0,0)">None</button>
+      <button onclick="updateInputPageSize(3,3)">3x3</button>
+      <button onclick="updateInputPageSize(4,4)">4x4</button>
+      <button onclick="updateInputPageSize(8,4)">8x4</button>
+
+      Card size: <input type="text" id="inputImgWidth" value="50" />
+      <button onclick="updateImgWidth()">Apply</button>
+      |
       <button onclick="updateInputImgWidth('delta', -100)">-100</button>
       <button onclick="updateInputImgWidth('delta', -10)">-10</button>
       <button onclick="updateInputImgWidth('delta', 10)">+10</button>
       <button onclick="updateInputImgWidth('delta', 100)">+100</button>
-       |
+      |
       <button onclick="updateInputImgWidth('absolute', 50)" class="solid">50</button>
       <button onclick="updateInputImgWidth('absolute', 100)" class="solid">100</button>
+      <button onclick="updateInputImgWidth('absolute', 150)" class="solid">150</button>
       <button onclick="updateInputImgWidth('absolute', 200)" class="solid">200</button>
-    <button onclick="updateInputImgWidth('absolute', 300)" class="solid">300</button>
+      <button onclick="updateInputImgWidth('absolute', 300)" class="solid">300</button>
     
     </div>
     <div id="status"></div>
@@ -116,6 +121,14 @@
         }
         updateImgWidth();
       };
+
+      const updateInputPageSize = (col, row) => {
+        const r = document.getElementById('inputRow');
+        const c = document.getElementById('inputCol');
+        r.value = row.toString();
+        c.value = col.toString();
+        fetchData(); 
+      }
     </script>
   </body>
 </html>
